# template-benchmark

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  deny.toml  generate-table.py
.github/workflows/: rust.yml
benches/: template-benchmark.rs
src/: lib.rs  main.rs
tmpls/: Cargo.toml
tmpls/askama/: Cargo.toml
tmpls/askama/src/: lib.rs
tmpls/handlebars/: Cargo.toml
tmpls/handlebars/src/: lib.rs
tmpls/handlebars/templates/: big-table.html
tmpls/horrorshow/: Cargo.toml
tmpls/horrorshow/src/: lib.rs
tmpls/markup/: Cargo.toml
tmpls/markup/src/: lib.rs
tmpls/maud/: Cargo.toml
tmpls/maud/src/: lib.rs
tmpls/minijinja/: Cargo.toml
tmpls/minijinja/src/: lib.rs
tmpls/rinja/: Cargo.toml
tmpls/rinja/src/: lib.rs
tmpls/rinja/templates/: teams.html
tmpls/rinja_git/: Cargo.toml  src
tmpls/ructe/: Cargo.toml
tmpls/ructe/src/: lib.rs
tmpls/ructe/templates/: big_table.rs.html  teams.rs.html
tmpls/sailfish/: Cargo.toml
tmpls/sailfish/src/: lib.rs
tmpls/sailfish/templates/: big-table.stpl  teams.stpl
tmpls/src/: lib.rs
tmpls/tera/: Cargo.toml  templates
tmpls/tera/src/: lib.rs
tmpls/tinytemplate/: Cargo.toml
tmpls/tinytemplate/src/: lib.rs
tmpls/tinytemplate/templates/: big-table.html  teams.html
tmpls/upon/: Cargo.toml
tmpls/upon/src/: lib.rs
tmpls/upon/templates/: big-table.html  teams.html
