[workspace]
members = [
    ".",
    "tmpls",
    "tmpls/askama",
    "tmpls/horrorshow",
    "tmpls/markup",
    "tmpls/minijinja",
    "tmpls/rinja",
    "tmpls/ructe",
    "tmpls/sailfish",
    "tmpls/tera",
    "tmpls/tinytemplate",
]
resolver = "2"

[package]
name = "template-benchmark"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
default = ["askama", "handlebars", "horrorshow", "markup", "maud", "minijinja", "rinja", "ructe", "sailfish", "tera", "tinytemplate"]
askama = ["dep:askama"]
handlebars = ["dep:handlebars"]
horrorshow = ["dep:horrorshow"]
markup = ["dep:markup"]
maud = ["dep:maud"]
minijinja = ["dep:minijinja"]
rinja = ["dep:rinja"]
ructe = ["dep:ructe"]
sailfish = ["dep:sailfish"]
tera = ["dep:tera"]
tinytemplate = ["dep:tinytemplate"]

[dependencies]
tmpls = { version = "*", path = "tmpls" }

askama = { version = "*", optional = true, path = "tmpls/askama", package = "tmpl-askama" }
handlebars = { version = "*", optional = true, path = "tmpls/handlebars", package = "tmpl-handlebars" }
horrorshow = { version = "*", optional = true, path = "tmpls/horrorshow", package = "tmpl-horrorshow" }
markup = { version = "*", optional = true, path = "tmpls/markup", package = "tmpl-markup" }
maud = { version = "*", optional = true, path = "tmpls/maud", package = "tmpl-maud" }
minijinja = { version = "*", optional = true, path = "tmpls/minijinja", package = "tmpl-minijinja" }
rinja = { version = "*", optional = true, path = "tmpls/rinja", package = "tmpl-rinja" }
ructe = { version = "*", optional = true, path = "tmpls/ructe", package = "tmpl-ructe" }
sailfish = { version = "*", optional = true, path = "tmpls/sailfish", package = "tmpl-sailfish" }
tera = { version = "*", optional = true, path = "tmpls/tera", package = "tmpl-tera" }
tinytemplate = { version = "*", optional = true, path = "tmpls/tinytemplate", package = "tmpl-tinytemplate" }

ahash = { version = "0.8.11", features = ["no-rng"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
pretty-error-debug = "0.3.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"

[[bench]]
name = "template-benchmark"
harness = false
