[workspace]
members = [
    ".",
    "tmpls",
    "tmpls/askama",
    "tmpls/horrorshow",
    "tmpls/markup",
    "tmpls/minijinja",
    "tmpls/rinja",
    "tmpls/ructe",
    "tmpls/sailfish",
    "tmpls/tera",
    "tmpls/tinytemplate",
]
resolver = "2"

[package]
name = "template-benchmark"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
default = ["compiled", "interpreted"]

compiled = ["askama", "horrorshow", "markup", "maud", "rinja", "ructe", "sailfish"]
interpreted = ["handlebars", "minijinja", "tera", "tinytemplate"]

askama = ["dep:askama", "_contains_compiled"]
handlebars = ["dep:handlebars", "_contains_compiled"]
horrorshow = ["dep:horrorshow", "_contains_interpreted"]
markup = ["dep:markup", "_contains_compiled"]
maud = ["dep:maud", "_contains_compiled"]
minijinja = ["dep:minijinja", "_contains_interpreted"]
rinja = ["dep:rinja", "_contains_compiled"]
ructe = ["dep:ructe", "_contains_compiled"]
sailfish = ["dep:sailfish", "_contains_compiled"]
tera = ["dep:tera", "_contains_interpreted"]
tinytemplate = ["dep:tinytemplate", "_contains_interpreted"]

_contains_compiled = []
_contains_interpreted = []

[dependencies]
tmpls = { version = "*", path = "tmpls" }

askama = { version = "*", optional = true, path = "tmpls/askama", package = "tmpl-askama" }
handlebars = { version = "*", optional = true, path = "tmpls/handlebars", package = "tmpl-handlebars" }
horrorshow = { version = "*", optional = true, path = "tmpls/horrorshow", package = "tmpl-horrorshow" }
markup = { version = "*", optional = true, path = "tmpls/markup", package = "tmpl-markup" }
maud = { version = "*", optional = true, path = "tmpls/maud", package = "tmpl-maud" }
minijinja = { version = "*", optional = true, path = "tmpls/minijinja", package = "tmpl-minijinja" }
rinja = { version = "*", optional = true, path = "tmpls/rinja", package = "tmpl-rinja" }
ructe = { version = "*", optional = true, path = "tmpls/ructe", package = "tmpl-ructe" }
sailfish = { version = "*", optional = true, path = "tmpls/sailfish", package = "tmpl-sailfish" }
tera = { version = "*", optional = true, path = "tmpls/tera", package = "tmpl-tera" }
tinytemplate = { version = "*", optional = true, path = "tmpls/tinytemplate", package = "tmpl-tinytemplate" }

ahash = { version = "0.8.11", features = ["no-rng"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
pretty-error-debug = "0.3.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"

[[bench]]
name = "template-benchmark"
harness = false
