[workspace]
members = [
    ".",
    "tmpls",
    "tmpls/askama",
    "tmpls/horrorshow",
    "tmpls/markup",
    "tmpls/minijinja",
    "tmpls/rinja",
    "tmpls/rinja_git",
    "tmpls/ructe",
    "tmpls/sailfish",
    "tmpls/tera",
    "tmpls/tinytemplate",
    "tmpls/upon",
]
resolver = "2"

[package]
name = "template-benchmark"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
default = ["compiled", "interpreted"]

compiled = ["askama", "horrorshow", "markup", "maud", "rinja", "rinja_git", "ructe", "sailfish"]
interpreted = ["handlebars", "minijinja", "tera", "tinytemplate", "upon"]

askama = ["dep:askama", "_contains_compiled"]
handlebars = ["dep:handlebars", "_contains_interpreted"]
horrorshow = ["dep:horrorshow", "_contains_compiled"]
markup = ["dep:markup", "_contains_compiled"]
maud = ["dep:maud", "_contains_compiled"]
minijinja = ["dep:minijinja", "_contains_interpreted"]
rinja = ["dep:rinja", "_contains_compiled"]
rinja_git = ["dep:rinja_git", "_contains_compiled"]
ructe = ["dep:ructe", "_contains_compiled"]
sailfish = ["dep:sailfish", "_contains_compiled"]
tera = ["dep:tera", "_contains_interpreted"]
tinytemplate = ["dep:tinytemplate", "_contains_interpreted"]
upon = ["dep:upon", "_contains_interpreted"]

_contains_compiled = []
_contains_interpreted = []

[dependencies]
tmpls = { version = "*", path = "tmpls" }

askama = { version = "*", optional = true, path = "tmpls/askama", package = "tmpl-askama" }
handlebars = { version = "*", optional = true, path = "tmpls/handlebars", package = "tmpl-handlebars" }
horrorshow = { version = "*", optional = true, path = "tmpls/horrorshow", package = "tmpl-horrorshow" }
markup = { version = "*", optional = true, path = "tmpls/markup", package = "tmpl-markup" }
maud = { version = "*", optional = true, path = "tmpls/maud", package = "tmpl-maud" }
minijinja = { version = "*", optional = true, path = "tmpls/minijinja", package = "tmpl-minijinja" }
rinja = { version = "*", optional = true, path = "tmpls/rinja", package = "tmpl-rinja" }
rinja_git = { version = "*", optional = true, path = "tmpls/rinja_git", package = "tmpl-rinja_git" }
ructe = { version = "*", optional = true, path = "tmpls/ructe", package = "tmpl-ructe" }
sailfish = { version = "*", optional = true, path = "tmpls/sailfish", package = "tmpl-sailfish" }
tera = { version = "*", optional = true, path = "tmpls/tera", package = "tmpl-tera" }
tinytemplate = { version = "*", optional = true, path = "tmpls/tinytemplate", package = "tmpl-tinytemplate" }
upon = { version = "*", optional = true, path = "tmpls/upon", package = "tmpl-upon" }

ahash = { version = "0.8.11", features = ["no-rng"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
pretty-error-debug = "0.3.0"
thiserror = "2.0.3"

[build-dependencies]
pretty-error-debug = "0.3.0"
self_cell = "1.0.4"
thiserror = "2.0.3"

[[bench]]
name = "template-benchmark"
harness = false

[lints.clippy]
type_complexity = "allow"
